--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -40,6 +40,7 @@
   function populateVoices() {
     voices = this.getVoices();
     voicesDropdown.innerHTML = voices
+      .filter(voice => voice.lang.includes('en'))
       .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</
       option>`)
       .join('');
@@ -57,8 +58,17 @@
     }
   }
 
+  function setOption() {
+    msg[this.name] = this.value;
+    toggle();
+  }
+
   speechSynthesis.addEventListener('voiceschanged', populateVoices);
   voicesDropdown.addEventListener('change', setVoice);
+  options.forEach(option => option.addEventListener('change', setOption));
+  speakButton.addEventListener('click', toggle);
+  stopButton.addEventListener('click', () => toggle(false));
+
 </script>
 
 </body>
